re PR c++/29732 (ICE on invalid friend declaration)

PR c++/29732
	* cp-tree.h (DECL_USE_TEMPLATE): Mention partial specializations.
	(explicit_class_specialization_p): Declare.
	* pt.c (explicit_class_specialization_p): New function.
	* parser.c (cp_parser_init_declarator): Check correct number of
	template parameters for in-class function definitions.
	(cp_parser_check_declarator_template_parameters): Stop looking for
	template classes when we find an explicit specialization.

	PR c++/29732
	* g++.dg/template/crash65.C: New test.
	* g++.dg/template/spec16.C: Tweak error markers.

	PR c++/29732
	* testsuite/ext/pb_assoc/example/mapping_level_neg.cc: Tweak error
	markers.

From-SVN: r119719